# ChangeLog for media-video/kdenlive
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/kdenlive/ChangeLog,v 1.90 2014/05/13 23:08:55 johu Exp $

*kdenlive-0.9.6-r1 (13 May 2014)

  13 May 2014; Johannes Huber <johu@gentoo.org> +kdenlive-0.9.6-r1.ebuild,
  kdenlive-0.9.2.ebuild, metadata.xml:
  Revision bump adapts USE flag changes made in KDE SC 4.13.1, bug #508350.

  04 Apr 2014; Johannes Huber <johu@gentoo.org> kdenlive-0.9.6.ebuild:
  DEPEND on sys-devel/gettext by Nikoli <nikoli@gmx.us>, bug #506450.

  20 Mar 2014; Michael Palimaka <kensington@gentoo.org> kdenlive-0.9.6.ebuild:
  Restore semantic-desktop USE flag.

  03 Jun 2013; Michael Palimaka <kensington@gentoo.org> kdenlive-0.9.6.ebuild:
  Fix KDE handbook installation wrt bug #470252.

  30 May 2013; Michael Palimaka <kensington@gentoo.org> -kdenlive-0.9.4.ebuild,
  kdenlive-0.9.2.ebuild, kdenlive-0.9.6.ebuild:
  Add USE dependency default in preparation for the removal of the semantic-
  desktop USE flag. Remove semantic-desktop USE flag from testing versions.
  Remove old.

*kdenlive-0.9.6 (20 Apr 2013)

  20 Apr 2013; Johannes Huber <johu@gentoo.org> +kdenlive-0.9.6.ebuild:
  Version bump wrt bug #465056.

  07 Feb 2013; Ben de Groot <yngwin@gentoo.org> kdenlive-0.9.4.ebuild:
  kdenlive-0.9.4 depends on mlt >=0.8.6, so adjust deps, bug #455994

*kdenlive-0.9.4 (05 Feb 2013)

  05 Feb 2013; Ben de Groot <yngwin@gentoo.org> +kdenlive-0.9.4.ebuild:
  version bump

  20 Jan 2013; Ben de Groot <yngwin@gentoo.org> kdenlive-0.9.2.ebuild:
  update mlt dep, because of useflag changes

  17 Aug 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/kdenlive-0.8.2.1-qt48.patch, -kdenlive-0.8.2.1.ebuild,
  kdenlive-0.9.2.ebuild:
  Stable on x86 wrt bug#429144. Remove older.

  07 Aug 2012; Agostino Sarubbo <ago@gentoo.org> kdenlive-0.9.2.ebuild:
  Stable for amd64, wrt bug #429144

*kdenlive-0.9.2 (31 May 2012)
