@@ -3,25 +3,17 @@ Hash: SHA256
 
 DIST kdenlive-0.9.2.tar.bz2 5341243 SHA256 410e4261d2300a306be05484559490a7533c4655dfe5caf7d3e883c0800644c0 SHA512 8ce4cc9e5802f5ee42abc06db2ec539f4b8b99c783d59ce72d03b226d79b3e28891b83e049611e00ec889a487e6ef0246ce5325b373c945cac985cef098ef740 WHIRLPOOL c1586f3f9c5a72f7ee018644cdd85dde087cd506fabcd43c126bea4cc39f3a5aa241f4494654ccb5df6ae53eed3e97c234335b7387482b19189514cc08f8f22e
 DIST kdenlive-0.9.6.tar.bz2 5355764 SHA256 fdc447135428864a283c48122f8bffc236fa2e5cdffbbc65e44bd5e2ff6282e7 SHA512 6af8b76c7f4c96825ad659bdf32ae54d84a41f96ff56479b3778fe28be3df2ee88006bd6319659c22bd35e3c237840807dbf7718bea7d844a5322cd33a182197 WHIRLPOOL 9e5182ea466f43245df278ff6b8a9ea1f8bfa0446891448773fa204ce8dbd91368e5669b46430257cd8d06626411653c08dc29fda02ac574d3c0c60954975f8d
+DIST kdenlive-0.9.8.tar.bz2 3342895 SHA256 870d68a19ac6012e09d3eedfd9b63983a79b5bcc9eabd465720466ed3fcd4128 SHA512 910405e0d1c03d4547cdd3bb2d36da0eeed5b20615c39ccd5740807bbf5e5cfcfa5474341db256812b619e2342827c3e997f15dddfef36bc8637ce0113b7ae0b WHIRLPOOL 3330a0c9b4769411f6bdd03ca2b2405aa348eb13d72d033d77d8685b93f6df6297c9e6a5772c9105488c07b9a56d75261ee42113c522ce46f3c9f1179d4784e1
 EBUILD kdenlive-0.9.2.ebuild 1116 SHA256 05316c9afc9cc15733ffa91514cbf272d962ca6563186500788623fcfbb925ef SHA512 a9c87eabf6d84c4dabd209bbd06eb22624f5913d422d8250c0bd7cbd56839adbfc9ec224151ca33f3b4ea3ce4512f949be8301a1b6f928bdd9a9d78a5959a621 WHIRLPOOL af4892efd416998432523fbb4121c3b7ee3daf5e1a576c463d9eb27a838575aa45b321d60c76cd2d04c1042cc9705378ef66dd36990ca62647eda8585ed89a69
 EBUILD kdenlive-0.9.6-r1.ebuild 1201 SHA256 b38d3d8d90982ee7f91951ea259599e948ce99eb961d0874c17f5398857418c1 SHA512 1e5fe5fbd2058612f0dbfaf23aee9d580cd6c21d16316a729c7b64e43f90cd7b4de0c211e714027ddf01aa2512290e24b365f57ec122cdf1262dd5c10684d060 WHIRLPOOL 690e1a38ba3846ae6a0dc9513fdc2ad941f741d6e373af1bb8265ffbf46e83d5757c3b3e7873b501fb21010a5d30c99a047211d1796b24209fbd90bac5c262ec
 EBUILD kdenlive-0.9.6.ebuild 1215 SHA256 3dfb2acda76a87d5b16b844fe5d7b46482ce03ceba80fe5099dd7acb33655b88 SHA512 298a3b5723e3b5735e4ad6ba48fa1e1ce269e2924bbede4732f354db2251dd8d99bd65a95b16254c1538a6778b2d6bdc19665c7ff706bf7a988a721dd5113e3b WHIRLPOOL a1ab911cff917d88328c507461c9caf4241844927265372f32e1d822b810c863302111cccc1ab79f6136fe893dd9b6496f2a8111fcd8a69c73e958c7be835b31
-MISC ChangeLog 12659 SHA256 3095fe60cde061be83317892948a03525cfc9159855143ecb5bb8dab419d13e3 SHA512 4bf78fc34a225af71fa440831a6b37027ce297e9a6d2178e11b033fb150b3829824d58ba0a1aabf162f45317c4dbb911faba166733a2ad089b806de01b7abaed WHIRLPOOL 4feae52be5415be641a6af3883a2d645e8631d46289eb7162af05f07a4c875806626c50eeda60cf9f53b25817086e03c4fe581da7f58beb3536e7181ada76517
+EBUILD kdenlive-0.9.8.ebuild 963 SHA256 c710540a4b5df6329b6da7af9053e1a6badc872f37bed343c122566fa6a61fb7 SHA512 8d320874e1a0a697a6749b10b5d8ad7fd040b7ad5f69cf5669b82236b7b5eebf5bc738c647ef4729312507a219bbf3a56b4d384dfa091d7c0cd9f5fdd8e9dbdb WHIRLPOOL 10ee649868b5875b2081bffed55d0c59c0bcdbd4dcc8750f4cbbd70bd361191bdfe1598bb05f90f17e3474bf9acb0d2ba3dd0b26d2c9b6cebb3f20fd0cba957b
+MISC ChangeLog 12805 SHA256 0729a911fb76451398a873f44ffeb44e58e1c67fc5dc85524902be1e1514b1fb SHA512 a214f1f3b17000e9d61b0085e0519c246f23fd1a00db242467e66f85113ff4fa7e0d57129d67f13c93a6d003de442069988cbce83e7356c9a9e66c38685bda5b WHIRLPOOL f64fad8d41e91bdcb8ee01745865213c00cc8c3e58bac9370c5fe771103ddf52e71600c12d8af74c4d6e3aafdcff1e714990025d3fb2d6682a357bd79f2db0af
 MISC metadata.xml 352 SHA256 276b740a2a5125d2dde50786ce92a9d43fc63d57da00ab231bde1a55be3c40b0 SHA512 0192b68ea6c4b612eff8f7366ecd72f8571f88a42c46fd05282d4cd949981a7f7354c4d551b19171e5d8a607a8bf027f5b2729578261a8ef90757934b30a17c8 WHIRLPOOL f64dc7f37f0e6c431adeeae188d3be7200a1ed0d06894d80f2fac80dc8a4979c7d95936dd4105cb658274428a7894af42d6db88a9880f9581a619d10e661e4ac
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTcqYMAAoJEGVpnaTzz9K9cL8P/jvxnsXWuZMQ6M3zIOuxJVot
-JmySFvzklts6b248Cy/RzwmB9M/hV3eGHlnGkl/Tcu0/0nQ4/BsmLP38mKn54GD5
-IujzaCmAImcCDIMdao+g+5UVctqR32gYQiWefwSb9W35U2iv6WoHckD3yVOKr0IF
-eCkweLmWmCCxKYYBdjqd614Zbi0CPhlsMBc1WThyYJufXBwl5674OlWaXzKcFS1Y
-cn1m+yPyjIiZ7cbUu0AaJXewV6IL5+Mo0d4k5UtzjBQQjuaMAzyHcEA46GRlu3tr
-XHwdIhObVo3VtQLiGYPwgavv/3HRQpwafRp6X8nslVCVP8XQ/dA6xQ07yAH2b1uV
-XoxzjAtdySrcBQA1rLv9jPk1ciDqWV0y4kdI+fSD1SzTfTou+2Nltlnam0TC51h6
-/1OgfP+JnL/ygt7NKXif3PCZKdzH/NQkWjz+vxxXuU4ti7d8h2RpI3uy/8NKr2dk
-u07iA3Yj4STyH831C9CF+49PTjGOPYQyi0kHMGARyW3h73H95+wYEyiQarrlZ6rK
-OD5DlzlbY8doTOHPamsRrxOhnlhRIsCN5+dVbL19zx28FAbZRbVymsRXDJqxoenh
-jO6Tn1VqZY7GuxK9EsG6VZs8n+zKLFWdO0GgJvZb8DhdPaYBocDE4Pf5VTOWQ59p
-RwXd/bneFNVoDK6CZRKq
-=i16H
+iEYEAREIAAYFAlNz5w0ACgkQFuHa/bHpVduWNACfdJ1FlY6hmTyuqKE8od5X9EN+
+WKAAn1VvFR3t55VtDwOEvWteYPiBS+WL
+=C/pP
 -----END PGP SIGNATURE-----
