@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup test unpack
+DEPEND=dev-libs/qjson >=kde-base/kdelibs-4.13.1:4[aqua=,nepomuk?] >=media-libs/mlt-0.9.0[ffmpeg,sdl,xml,melt,qt4,kdenlive] virtual/ffmpeg[encode,sdl,X] v4l? ( media-libs/libv4l ) sys-devel/gettext >=sys-apps/sed-4 sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) dev-util/automoc virtual/pkgconfig !aqua? ( >=x11-libs/libXtst-1.1.0 x11-proto/xf86vidmodeproto ) handbook? ( app-text/docbook-xml-dtd:4.2 app-text/docbook-xsl-stylesheets ) >=dev-qt/qtopengl-4.8.5:4 dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.13.1:4[aqua=]
+DESCRIPTION=A non-linear video editing suite for KDE
+EAPI=5
+HOMEPAGE=http://www.kdenlive.org/
+IUSE=debug nepomuk v4l +handbook aqua
+KEYWORDS=~amd64 ~ppc ~x86 ~x86-linux
+LICENSE=GPL-2
+RDEPEND=dev-libs/qjson >=kde-base/kdelibs-4.13.1:4[aqua=,nepomuk?] >=media-libs/mlt-0.9.0[ffmpeg,sdl,xml,melt,qt4,kdenlive] virtual/ffmpeg[encode,sdl,X] v4l? ( media-libs/libv4l ) >=kde-base/oxygen-icons-4.13.1:4[aqua=] handbook? ( >=kde-base/kdelibs-4.13.1:4[aqua=,handbook] ) >=dev-qt/qtopengl-4.8.5:4 dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.13.1:4[aqua=]
+SLOT=4
+SRC_URI=mirror://kde/stable/kdenlive/0.9.8/src/kdenlive-0.9.8.tar.bz2
+_eclasses_=cmake-utils	412d9e2d2c6f85f46dad595e68570d21	eutils	025442f2eecab39ad0b4e541b6e142af	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	kde4-base	4f85356160aa721ee3f4be09609def19	kde4-functions	7fc09e82c0d1735f44aedfa8e5073065	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
+_md5_=83a80eb5e54d194770b777067b334793
