@@ -1,6 +1,12 @@
 # ChangeLog for media-video/kdenlive
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/kdenlive/ChangeLog,v 1.90 2014/05/13 23:08:55 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/kdenlive/ChangeLog,v 1.91 2014/05/14 21:58:08 reavertm Exp $
+
+*kdenlive-0.9.8 (14 May 2014)
+
+  14 May 2014; Maciej Mrozowski <reavertm@gentoo.org> +kdenlive-0.9.8.ebuild,
+  metadata.xml:
+  Version bump.
 
 *kdenlive-0.9.6-r1 (13 May 2014)
 
